[package]
name = "libiot"
version = "0.1.0"
edition = "2024"
description = "A Rust library that enables any IoT device to securely connect to the cloud, manage data, and interact with cloud services"
authors = ["Shishir Dey <r0qck3ntp@mozmail.com>"]
license = "MIT"
repository = "https://github.com/shishir-dey/libiot"
homepage = "https://shishir-dey.github.io/libiot/"
documentation = "https://shishir-dey.github.io/libiot/"
readme = "README.md"
keywords = ["iot", "embedded", "no-std", "network", "mqtt"]
categories = ["embedded", "network-programming", "no-std"]
rust-version = "1.85"

[dependencies]
heapless = "0.8.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6"
defmt = { version = "0.3", optional = true }

[features]
default = []
std = []
async = []
defmt = ["dep:defmt"]

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc", "executor"] }
dotenvy = "0.15.7"
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "bench_suite"
path = "benches/mod.rs"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
